<resources>
    <string name="app_name">Lucky Number</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">First Name</string>
    <string name="hint_email">Last Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_bdate">Birth Day</string>
    <string name="hint_lucky">Lucky Number</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_date">Enter Valid Birthdate</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="entersecurityhint">Enter security hint</string>
    <string name="blank"></string>
    <string name="info_1"><![CDATA[
         <h1>Number 1</h1>
        <p>The Lucky Number 1 drive in this life is characterized by individualist desires, independence, and the need for personal attainment. The purpose to be fulfilled on this Lucky Number is that of becoming independent. This is a two part learning process; first, you must learn to stand on your own two feet and learn not to depend on others. After you are indeed free and independent, you must learn to be a leader. Many of our Generals, corporate leaders, and political leaders are men and women having the Lucky Number number 1.</p>
        <p>The 1 always has the potential for greatness as a leader, but they may fail as a follower. Many 1\'s spend most of their lives shaking off their dependent side. When this happens, there is little time left for enjoying the rewards to be gained through independence. The individual with Lucky Number 1 has to overcome an environment in which it is very easy to be dependent, and difficult to be independent.</p>
        <p>A person with positive 1 traits abounds in creative inspiration, and possesses the enthusiasm and drive to accomplish a great deal. Your drive and potential for action comes directly from the enormous depth of strength you have. This is both the physical and inner varieties of strength. With this strength comes utter determination and the capability to lead. As a natural leader you have a flair for taking charge of any situation. Highly original, you may have talents as an inventor or innovator of some sort. In any work that you choose, your independent attitude can show through. You have very strong personal needs and desires, and you feel it is always necessary to follow your own convictions.</p>
        <p>You are ambitious, and either understand or must learn the need for aggressive action to promote yourself. Although you may hide the fact for social reasons, you are highly self-centered and demand to have your way in most circumstances.</p>
        <p>When the 1 Lucky Number person is not fully developed and expressing the negative side of this number, the demeanor may appear very dependent rather than independent. If you are expressing this negative trait of the number 1, you are likely to be very dissatisfied with your circumstances, and long for self-sufficiency. This is defined as the weak or dependent side of the negative 1 Lucky Number. On the strong side of this negative curve, the 1 energy can become too self-serving, selfish and egotistical. Over-confidence and impatience mark this individual.</p>
        ]]>
    </string>
    <string name="info_2"><![CDATA[
         <h1>Number 2</h1>
        <p>The positive attributes of the number 2 Lucky Number produces extremely sensitive people who generally have the most delicate ability to be balanced and fair. They are emotional people.</p>
        <p>You clearly see the full spectrum of viewpoints in any argument or situation, and because of this people may seek you out to be a mediator. In this role you are able to settle disputes with the most unbiased flair. There is sincere concern for others; you think the best of people, and want the best for them.</p>
        <p>You are totally honest and open in thought, word and deed. You are apt to excel in any for of group activity where your expertise in handling and blending people can be used effectively. Manners and tact mark your way with others at all times. In many ways, you are a creature of habit and routine, and you like to your path and pattern well worn and familiar.</p>
        <p>You are the master of compromise and of maintaining harmony in your environment, never stooping to aggravate or argue. A natural collector, you rarely dispose of anything that may have a shred of value.</p>
        <p>The negative side of the 2 is hardly a problem. The biggest obstacle and difficulty you may face is that of passivity and a state of apathy and lethargy. The negative 2 can be very pessimistic and accomplishes very little. Needless to say, the negative 2 doesn\'t belong in the business world and even the more positive individual with the 2 Lucky Number may prefer a more amiable and less competitive environment.</p>
        ]]>
    </string>
    <string name="info_3"><![CDATA[
         <h1>Number 3</h1>
        <p>The number 3 Lucky Number is one that emphasizes expression, sociability, and creativity as the lesson to be learned in this life. Here we are apt to find the entertainers of the world, bright, effervescent, sparkling people with very optimistic attitudes.</p>
        <p>A truly gifted 3 possesses the most exceptional creative skills, normally in the verbal realm, writing, speaking, acting, or similar endeavors. The lesson to be learned with a 3 Lucky Number is that of achievement through expression.</p>
        <p>The bright side of this path stresses harmony, beauty and pleasures; of sharing your creative talents with the world. Capturing your capability in creative self-expression is the highest level of attainment for this Lucky Number. The characteristics of the 3 are warmth and friendliness, a good conversationalist, social and open. A good conversationalist both from the standpoint of being a delight to listen to, but even more importantly, one who has the ability to listen to others. Accordingly, the Lucky Number 3 produces individuals who are always a welcome addition to any social situation and know how to make others feel at home.</p>
        <p>The creative imagination is present, if sometimes latent, as the 3 may not be moved to develop his talent. The approach to life tends to be exceedingly positive, however, and your disposition is almost surely sunny and open-hearted. You effectively cope with all of the many setbacks that occur in life and readily bounce back for more. It is usually easy for you to deal with problems because you can freely admit the existence of problems without letting them get you down.</p>
        <p>You have good manners and seem to be very conscious of other people\'s feelings and emotions. Life is generally lived to the fullest, often without much worry about tomorrow. You are not very good at handling money because of a general lack of concern about it. You spend it when you have it and don\'t when you don\'t.</p>
        <p>On the negative side, a 3 may be so delighted with the joy of living that the life becomes frivolous and superficial. You may scatter your abilities and express little sense of purpose. The 3 can be an enigma, for no apparent reason you may become moody and tend to retreat. Escapist tendencies are not uncommon with the 3 Lucky Number, and you find it very hard to settle into one place or one position. Guard against being critical of others, impatient, intolerant, or overly optimistic.</p>
        <p>Typically, the Lucky Number 3 gives an above-average ability in some art form. This can encompass painting, interior decorating, landscaping, crafts, writing, music, or the stage, or all of the above. You are apt to be a happy, inspired person, constantly seeking the stimuli of similar people. Your exuberant nature can take you far, especially if you are ever able to focus your energies and talents.</p>
        ]]>
    </string>
    <string name="info_4"><![CDATA[
         <h1>Number 4</h1>
        <p>The Lucky Number 4 produces the most trustworthy, practical, and down-to-earth of individuals; the cornerstone members of society. The goal of this Lucky Number is learning to take orders and to carry them out with dedication and perseverance.</p>
        <p>You always demand as much from yourself as you do from others. You are apt to be an excellent organizer and planner because of your innate ability to view things in a very common sense and practical way. You have the kind of will power that is often mistaken for sheer stubbornness. Once a decision is made, it will be followed through to the conclusion, right, wrong, or indifferent; you are very set in your ways and determined to handle things the way you are so certain that they should be handled.</p>
        <p>Your tenacity of purpose and ability to get the job done borders on obsession. Loyal and devoted, you make the best of your marriage, and you are a dependable business partner. Friends may be few in number, but you are very close to them and once friendships are made, they often last a lifetime. The number 4 is solidly associated with the element of earth from which it gains it strength and utter sense of reality.</p>
        <p>You are one of the most dependable people you know. If patience and determination can ever win, you are sure to achieve great success in life.</p>
        <p>The negative side of the 4 can prove dogmatic to an excess, narrow-minded, and repressive. A lot of skin-deep people turn you off, and you lack the tact to keep your feelings from being totally clear to all around. Additionally, the negative 4 has a bad tendency to get too caught up in the daily routine of affairs and often misses the big picture and major opportunities that come along once in a while.</p>
        ]]></string>
</resources>